--- a/index.html
+++ b/index.html
@@ -30,50 +30,48 @@
 </head>
 <body>
     <header>
-        <div class="go-to-top">
-            <!-- <a href="./index.html"><img src="./images/logo_black.png" alt="logo"></a> -->
-            <a href="./index.html"><img src="./images/logo_white.png" alt="logo"></a>
-        </div>
+    <div class="go-to-top">
+      <!-- 로고는 CSS 배경이미지로 교체됨 -->
+      <a href="./index.html" class="logo" aria-label="401LAB"></a>
+    </div>
 
-        <ul class="menu active">
-            <li class="menu-txt menuhome"><a href="./index.html">Home</a></li>
-            <li class="menu-txt menuportfolio"><a href="./html/portfolio.html">Portfolio</a></li>
-            <li class="menu-txt menuservies"><a href="./html/services.html">Servies</a></li>
-            <li class="menu-txt menucontact"><a href="./html/contact.html">Contact</a></li>
-        </ul>
+    <!-- 데스크톱 메뉴 -->
+    <ul class="menu active">
+      <li class="menu-txt menuhome"><a href="./index.html">Home</a></li>
+      <li class="menu-txt menuportfolio"><a href="./html/portfolio.html">Portfolio</a></li>
+      <li class="menu-txt menuservies"><a href="./html/services.html">Services</a></li>
+      <li class="menu-txt menucontact"><a href="./html/contact.html">Contact</a></li>
+    </ul>
 
-        <!-- <div class="nav-menu">
-                Menu
-        </div>
-         <div class="menu-show">
-                <div class="menu-wrap">
-                    <a href="./index.html"><h5>Home</h5></a>
-                    <a href="./index.html"><h5>Portfolio</h5></a>
-                    <a href="./index.html"><h5>Servies</h5></a>
-                    <a href="./index.html"><h5>Contact</h5></a>
-                </div>
-        </div> -->
-    </header>
+    <!-- 모바일: JS로 토글 -->
+    <button class="menu-toggle" id="menu-btn" aria-expanded="false" aria-controls="mobile-drawer">MENU</button>
 
-    <main>
-       <section class="home-main">
-       <div class="home-main-images">
-        <img id="hero-img" src="./images/main.png" alt="main image">
-        </div>
+    <nav class="mobile-drawer" id="mobile-drawer" aria-label="Mobile menu">
+      <ul class="mobile-menu">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./html/portfolio.html">Portfolio</a></li>
+        <li><a href="./html/services.html">Services</a></li>
+        <li><a href="./html/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <div class="home-main-contact">
-            <li class="contact-mail"><a href="mailto:401lab.ai@gmail.com">MAIL</a></li>
-            <li class="contact-ig"><a href="https://www.instagram.com/401.lab.ai/">INSTAGRAM</a></li>
-        </div>
-       </section>
+  <main>
+    <section class="home-main">
+      <div class="home-main-images"></div>
 
-        
-    </main>
-    <footer>
-        <div class="footer-txt">ⓒ401LAB.ALL RIGHT RESERVRED</div>
-    </footer>
+      <div class="home-main-contact">
+        <li class="contact-mail"><a href="mailto:401lab.ai@gmail.com">MAIL</a></li>
+        <li class="contact-ig"><a href="https://www.instagram.com/401.lab.ai/">INSTAGRAM</a></li>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-txt">ⓒ401LAB.ALL RIGHT RESERVRED</div>
+  </footer>
+
     <script src="./js/index.js"></script>
 
-</svg>
 </body>
 </html>
