--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <title>401LAB‌ </title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <!-- favicon -->
-    <link rel="icon" href="./assets/favicon/favicon-32x32.png" sizes="any"><!-- 32×32 -->
-    <link rel="apple-touch-icon" href="./assets/favicon/apple-touch-icon.png"><!-- 180×180 -->
     <link rel="manifest" href="./assets/favicon/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="./assets/favicon/apple-touch-icon.png">
     <!-- og -->
     <meta property="og:title" content="401LAB">
     <meta property="og:description" content="AI Visual Studio">
@@ -28,7 +29,7 @@
     <!-- plugIn -->
 
 </head>
-<body>
+<body  class="home">
     <header>
     <div class="go-to-top">
       <!-- 로고는 CSS 배경이미지로 교체됨 -->
