--- a/html/services.html
+++ b/html/services.html
@@ -64,8 +64,8 @@
       <header class="services-header">
         <h2>We build brand visuals with AI</h2>
         <p class="lead">
-          <div> campaign imagery to product shots — every detail is crafted through direction, texture, and light to feel truly real.</div>
-        <div> campaign imagery to product shots — every detail is crafted through direction, texture, and light to feel truly real.</div>
+          <div> From campaign imagery to product shots — every detail is shaped through art direction and AI.</div>
+        <div> 감각적인 아트디렉션과 AI 시스템으로 브랜드 비주얼을 제작합니다.</div>
         </p>
       </header>
 
@@ -77,7 +77,7 @@
             </div>
             <div class="card-title">Brand Visuals</div>
             <div class="card-overlay">
-              <p>브랜드 무드 &amp; 스타일 프레임, 아트 디렉션</p>
+              <p>Art direction, visual storytelling, and brand identity design</p>
             </div>
           </a>
         </li>
@@ -85,9 +85,9 @@
         <li class="service-card">
           <a href="#">
             <div class="media"></div>
-            <div class="card-title">Model</div>
+            <div class="card-title">AI Model</div>
             <div class="card-overlay">
-              <p>가상 모델·캐릭터 생성, 룩북/캠페인 컷</p>
+              <p>Lookbook & campaign imagery built through AI generation</p>
             </div>
           </a>
         </li>
@@ -97,7 +97,7 @@
             <div class="media"></div>
             <div class="card-title">Product Photography</div>
             <div class="card-overlay">
-              <p>제품질감·광원 시뮬레이션, 전개컷/라이프스타일 컷</p>
+              <p>Studio-quality visuals — refined, detailed, and realistic</p>
             </div>
           </a>
         </li>
@@ -107,7 +107,7 @@
             <div class="media"></div>
             <div class="card-title">Prompt Design System</div>
             <div class="card-overlay">
-              <p>브랜드 전용 프롬프트 세트 &amp; 가이드라인 구축</p>
+              <p>Brand-Specific Prompt Systems & Guidelines</p>
             </div>
           </a>
         </li>
@@ -117,7 +117,7 @@
             <div class="media"></div>
             <div class="card-title">AI Motion &amp; Video</div>
             <div class="card-overlay">
-              <p>영상 합성, 모션 루프, 짧은 포맷 광고 컷</p>
+              <p>AI Motion, Video Loops & Short-Form Ads</p>
             </div>
           </a>
         </li>
@@ -127,7 +127,7 @@
             <div class="media"></div>
             <div class="card-title">Collaborations</div>
             <div class="card-overlay">
-              <p>브랜드/크리에이터 협업 프로젝트</p>
+              <p>Brand & Creator Collaborations</p>
             </div>
           </a>
         </li>
