--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -63,25 +63,25 @@
       <li class="portfolio-list list1">
         <a href="./portfolio_1.html">
           <img src="../images/portfolio-1.jpeg" alt="">
-          <div class="overlay-text">PROJECT 1</div>
+          <div class="overlay-text">Fashion</div>
         </a>
       </li>
       <li class="portfolio-list list2">
         <a href="./portfolio_2.html">
-          <img src="../images/portfolio-6.png" alt="">
-          <div class="overlay-text">PROJECT 2</div>
+          <img src="../images/portfolio-2.png" alt="">
+          <div class="overlay-text">Beauty</div>
         </a>
       </li>
       <li class="portfolio-list list3">
         <a href="./portfolio_3.html">
           <img src="../images/portfolio-3.png" alt="">
-          <div class="overlay-text">PROJECT 3</div>
+          <div class="overlay-text">AI Model</div>
         </a>
       </li>
       <li class="portfolio-list list4">
         <a href="./portfolio_4.html">
-          <img src="../images/portfolio-5.png" alt="">
-          <div class="overlay-text">PROJECT 4</div>
+          <img src="../images/portfolio-4.png" alt="">
+          <div class="overlay-text">Pictorial</div>
         </a>
       </li>
     </div>
@@ -89,27 +89,27 @@
     <div class="portfolio-list-row2">
       <li class="portfolio-list list5">
         <a href="./portfolio_5.html">
-          <img src="../images/portfolio-2.png" alt="">
-          <div class="overlay-text">PROJECT 5</div>
+          <img src="../images/portfolio-5.png" alt="">
+          <div class="overlay-text">Key Visual</div>
         </a>
       </li>
       <li class="portfolio-list list6">
         <a href="./portfolio_6.html">
-          <img src="../images/portfolio-4.png" alt="">
-          <div class="overlay-text">PROJECT 6</div>
+          <img src="../images/portfolio-6.jpg" alt="">
+          <div class="overlay-text">Branding</div>
         </a>
       </li>
       <li class="portfolio-list list7">
         <a href="./portfolio_7.html">
-          <img src="../images/portfolio-7.jpeg" alt="">
-          <div class="overlay-text">PROJECT 7</div>
+          <img src="../images/portfolio-7.png" alt="">
+          <div class="overlay-text">Branding</div>
         </a>
       </li>
       <li class="portfolio-list list8">
-        <a href="./portfolio_8.html">
+        <!-- <a href="./portfolio_8.html">
           <img src="../images/portfolio-8.jpeg" alt="">
           <div class="overlay-text">PROJECT 8</div>
-        </a>
+        </a> -->
       </li>
     </div>
   </section>
