--- a/html/portfolio_1.html
+++ b/html/portfolio_1.html
@@ -64,25 +64,28 @@
       <div class="overview-grid">
         <!-- 큰 이미지 (왼쪽, 2행 세로로 span) -->
         <div class="cell cell--hero">
-          <img src="" alt="대표 이미지">
+          <img src="../images/portfolio1-1.jpg" alt="대표 이미지">
         </div>
 
         <!-- 작은 이미지 8개 -->
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-2.jpeg" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-3.jpeg" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-4.jpeg" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-5.jpeg" alt=""></div>
 
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-6.jpeg" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-7.jpeg" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-8.jpeg" alt=""></div>
+        <div class="cell"><img src="../images/portfolio1-9.jpeg" alt=""></div>
       </div>
 
       <!-- 텍스트(제목/설명) -->
       <div class="overview-meta">
-        <h2 class="overview-title">Title</h2>
-        <p class="overview-desc">Text</p>
+        <h2 class="overview-title">AI Fashion Model</h2>
+        <p class="overview-desc">Created by replicating real mannequin styling on an AI model.
+This project explores how fashion can be visualized without physical shoots.</p>
+        <p class="overview-desc">마네킹에 입혀진 실제 스타일을 AI 모델이 착용한 듯 구현한 프로젝트로,
+물리적 촬영 없이도 패션 비주얼을 현실감 있게 구현하였습니다.</p>
       </div>
     </div>
   </section>
