--- a/html/portfolio_2.html
+++ b/html/portfolio_2.html
@@ -64,25 +64,24 @@
       <div class="overview-grid">
         <!-- 큰 이미지 (왼쪽, 2행 세로로 span) -->
         <div class="cell cell--hero">
-          <img src="" alt="대표 이미지">
+          <img src="../images/portfolio2-1.png" alt="대표 이미지">
         </div>
 
         <!-- 작은 이미지 8개 -->
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio2-2.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio2-5.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio2-4.png" alt=""></div>
 
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio2-6.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio2-7.png" alt=""></div>
+ 
       </div>
 
       <!-- 텍스트(제목/설명) -->
       <div class="overview-meta">
-        <h2 class="overview-title">Title</h2>
-        <p class="overview-desc">Text</p>
+        <h2 class="overview-title">AI Beauty Model</h2>
+        <p class="overview-desc">A virtual beauty campaign created from scratch — from product concept to model design. Built with consistent AI direction to visualize a fictional lip gloss brand in hyper-real detail.</p>
+        <p class="overview-desc">가상의 립글로즈 브랜드를 설정하고, AI 모델과 함께 일관된 톤으로 구현한 뷰티 캠페인으로, 제품 컨셉부터 비주얼까지 모두 AI 아트 디렉션으로 완성한 프로젝트입니다.</p>
       </div>
     </div>
   </section>
