--- a/html/portfolio_3.html
+++ b/html/portfolio_3.html
@@ -64,25 +64,26 @@
       <div class="overview-grid">
         <!-- 큰 이미지 (왼쪽, 2행 세로로 span) -->
         <div class="cell cell--hero">
-          <img src="" alt="대표 이미지">
+          <img src="../images/portfolio3-1.png" alt="대표 이미지">
         </div>
 
         <!-- 작은 이미지 8개 -->
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-2.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-3.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-4.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-5.png" alt=""></div>
 
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-6.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-7.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-8.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio3-9.png" alt=""></div>
       </div>
 
       <!-- 텍스트(제목/설명) -->
       <div class="overview-meta">
-        <h2 class="overview-title">Title</h2>
-        <p class="overview-desc">Text</p>
+        <h2 class="overview-title">AI Model</h2>
+        <p class="overview-desc">A single AI model showing a full range of emotions — created only through prompt direction. An experiment in how AI can express feeling and subtle realism.</p>
+          <p class="overview-desc">하나의 AI 모델로 다양한 감정을 연출한 시리즈로, 프롬프트 연출만으로 감정과 현실감을 표현하였습니다.</p>
       </div>
     </div>
   </section>
