--- a/html/portfolio_4.html
+++ b/html/portfolio_4.html
@@ -64,25 +64,25 @@
       <div class="overview-grid">
         <!-- 큰 이미지 (왼쪽, 2행 세로로 span) -->
         <div class="cell cell--hero">
-          <img src="" alt="대표 이미지">
+          <img src="../images/portfolio4-1.png" alt="대표 이미지">
         </div>
 
         <!-- 작은 이미지 8개 -->
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio4-2.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio4-3.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio4-4.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio4-5.png" alt=""></div>
 
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio4-6.png" alt=""></div>
+
       </div>
 
       <!-- 텍스트(제목/설명) -->
       <div class="overview-meta">
-        <h2 class="overview-title">Title</h2>
-        <p class="overview-desc">Text</p>
+        <h2 class="overview-title">AI Editorial</h2>
+        <p class="overview-desc">AI-generated fashion editorial focused on light, pose, and form.</p>
+        <p class="overview-desc">조명, 포즈, 구도에 집중해 제작한 AI 하이패션 화보 시리즈</p>
+
       </div>
     </div>
   </section>
