--- a/html/portfolio_5.html
+++ b/html/portfolio_5.html
@@ -64,25 +64,27 @@
       <div class="overview-grid">
         <!-- 큰 이미지 (왼쪽, 2행 세로로 span) -->
         <div class="cell cell--hero">
-          <img src="" alt="대표 이미지">
+          <img src="../images/portfolio5-1.png" alt="대표 이미지">
         </div>
 
         <!-- 작은 이미지 8개 -->
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-2.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-3.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-4.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-5.png" alt=""></div>
 
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-6.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-7.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-8.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio5-9.png" alt=""></div>
       </div>
 
       <!-- 텍스트(제목/설명) -->
       <div class="overview-meta">
-        <h2 class="overview-title">Title</h2>
-        <p class="overview-desc">Text</p>
+        <h2 class="overview-title">Energy Drink Key Visual</h2>
+        <p class="overview-desc">AI-generated key visuals for a fictional energy drink brand —
+created with consistent product design and visual direction.</p>
+      <p class="overview-desc">가상의 에너지드링크 브랜드를 위한 AI 키비주얼로, 제품 디자인과 비주얼 톤을 일관성 있게 유지하며 제작했습니다.</p>
       </div>
     </div>
   </section>
