--- a/html/portfolio_6.html
+++ b/html/portfolio_6.html
@@ -64,25 +64,28 @@
       <div class="overview-grid">
         <!-- 큰 이미지 (왼쪽, 2행 세로로 span) -->
         <div class="cell cell--hero">
-          <img src="" alt="대표 이미지">
+          <img src="../images/portfolio6-1.jpg" alt="대표 이미지">
         </div>
 
         <!-- 작은 이미지 8개 -->
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-2.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-3.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-4.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-5.png" alt=""></div>
 
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-6.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-7.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-8.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio6-9.png" alt=""></div>
       </div>
 
       <!-- 텍스트(제목/설명) -->
       <div class="overview-meta">
-        <h2 class="overview-title">Title</h2>
-        <p class="overview-desc">Text</p>
+        <h2 class="overview-title">Burger Brand Visual</h2>
+        <p class="overview-desc">AI-created brand visuals that look and feel real —
+showing how food imagery can be produced without a photoshoot.</p>
+        <p class="overview-desc">촬영 없이도 실제처럼 구현한 AI 버거 브랜드 비주얼로,
+음식의 질감과 조명을 사실적으로 연출한 프로젝트입니다.</p>
       </div>
     </div>
   </section>
