--- a/html/portfolio_7.html
+++ b/html/portfolio_7.html
@@ -64,25 +64,28 @@
       <div class="overview-grid">
         <!-- 큰 이미지 (왼쪽, 2행 세로로 span) -->
         <div class="cell cell--hero">
-          <img src="" alt="대표 이미지">
+          <img src="../images/portfolio7-1.png" alt="대표 이미지">
         </div>
 
         <!-- 작은 이미지 8개 -->
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-2.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-3.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-4.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-5.png" alt=""></div>
 
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
-        <div class="cell"><img src="" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-6.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-7.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-8.png" alt=""></div>
+        <div class="cell"><img src="../images/portfolio7-9.png" alt=""></div>
       </div>
 
       <!-- 텍스트(제목/설명) -->
       <div class="overview-meta">
-        <h2 class="overview-title">Title</h2>
-        <p class="overview-desc">Text</p>
+        <h2 class="overview-title">Brand Visual</h2>
+        <p class="overview-desc">AI-generated branding visuals inspired by slow living.
+Focused on natural light, warmth, and tactile mood to express the brand’s identity.</p>
+        <p class="overview-desc">‘슬로우 리빙’에서 영감을 받은 AI 브랜딩 비주얼로,
+자연광과 따뜻한 질감으로 브랜드의 감성을 표현했습니다.</p>
       </div>
     </div>
   </section>
